grafana-prometheus/httproute-grafana.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-route
  namespace: monitoring
spec:
  hostnames:
    - grafana.texascontrols.com
  parentRefs:
    - name: traefik-gateway
      namespace: networking
      sectionName: https-texascontrols
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: kube-prometheus-stack-grafana
          namespace: monitoring
          port: 80
